--- a/app/src/main/res/layout/view_latlon.xml
+++ b/app/src/main/res/layout/view_latlon.xml
@@ -5,12 +5,12 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFF">
+        android:background="@android:color/white">
 
     <androidx.appcompat.widget.AppCompatImageView
-            android:layout_margin="8dp"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_margin="@dimen/margin"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
             android:id="@+id/markerModelView"
             app:srcCompat="@drawable/marker"/>
     <TextView
@@ -18,60 +18,60 @@
             android:layout_toEndOf="@+id/markerModelView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:layout_marginTop="17dp"
+            android:textSize="@dimen/text_small"
+            android:layout_marginTop="@dimen/custom_margin_17"
             android:textStyle="normal"
-            android:textColor="#000000"
+            android:textColor="@android:color/black"
             tools:text="1"/>
     <TextView
             android:id="@+id/titleLatModelView"
             android:layout_toEndOf="@+id/indexLatModelView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:textSize="@dimen/text_normal"
+            android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="@dimen/margin"
             android:textStyle="bold"
-            android:textColor="#4CAF50"
+            android:textColor="@color/green"
             android:text="@string/view_model_lat_lon_lat_title"/>
     <TextView
 
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginTop="@dimen/margin"
+            android:layout_marginStart="@dimen/margin"
+            android:layout_marginEnd="@dimen/big_margin"
             android:id="@+id/textLatModelView"
-            android:layout_toRightOf="@+id/titleLatModelView"
+            android:layout_toEndOf="@+id/titleLatModelView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#000000"
+            android:textSize="@dimen/text_normal"
+            android:textColor="@android:color/black"
             tools:text="0.0"/>
     <TextView
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="@dimen/margin"
             android:id="@+id/titleLonModelView"
             android:layout_toEndOf="@+id/textLatModelView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_normal"
             android:textStyle="bold"
-            android:textColor="#673AB7"
+            android:textColor="@color/violet"
             android:text="@string/view_model_lat_lon_lon_title"/>
     <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginTop="@dimen/margin"
+            android:layout_marginEnd="@dimen/big_margin"
+            android:layout_marginStart="@dimen/margin"
             android:id="@+id/textLonModelView"
             android:layout_toEndOf="@+id/titleLonModelView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#000000"
+            android:textSize="@dimen/text_normal"
+            android:textColor="@android:color/black"
             tools:text="0.0"/>
     <View
             android:layout_below="@id/markerModelView"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#F44336"/>
+            android:background="@color/red"/>
 
 </RelativeLayout>
